Assignment 1/sqlCompilation/ANTLR/lib/sqlParserParser.java
// Generated from sqlParser.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class sqlParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, SELECT=2, FROM=3, WHERE=4, DISTINCT=5, ALL=6, ASC=7, DESC=8, LIMIT=9, 
		HAVING=10, GROUP_BY=11, ORDER_BY=12, AS=13, BETWEEN=14, OR=15, AND=16, 
		XOR=17, CURRENT_DATE=18, UPDATE=19, DELETE=20, SET=21, LOW_PRIORITY=22, 
		QUICK=23, IGNORE=24, INSERT=25, INTO=26, DELAYED=27, HIGH_PRIORITY=28, 
		VALUES=29, VALUE=30, INNER=31, CROSS=32, STRAIGHT_JOIN=33, ON=34, JOIN=35, 
		NATURAL=36, LEFT=37, RIGHT=38, OUTER=39, USING=40, NOT=41, NULL=42, DIV=43, 
		MOD=44, EQ=45, LTE=46, GTE=47, GT=48, LT=49, SEMI=50, COLON=51, DOT=52, 
		COMMA=53, ASTERISK=54, RPAREN=55, LPAREN=56, RBRACK=57, LBRACK=58, PLUS=59, 
		MINUS=60, NEGATION=61, BITOR=62, BITAND=63, POWER_OP=64, BIT_NOT=65, BIT_NOT_EQ=66, 
		LETTER=67, DIGIT=68, UNDERSCORE=69, DOLLER=70, TICK=71, INTEGER_NUM=72, 
		REAL_NUMBER=73;
	public static final int
		RULE_var1 = 0, RULE_var2 = 1, RULE_var3 = 2, RULE_identifier = 3, RULE_number_literal = 4, 
		RULE_sqlQuery = 5, RULE_sql_statement = 6, RULE_select_statement = 7, 
		RULE_select_expression = 8, RULE_select_list1 = 9, RULE_from_clause1 = 10, 
		RULE_where_clause = 11, RULE_groupby_clause = 12, RULE_groupby_item = 13, 
		RULE_having_clause = 14, RULE_orderby_clause = 15, RULE_orderby_item = 16, 
		RULE_limit_clause = 17, RULE_offset = 18, RULE_row_count = 19, RULE_select_list = 20, 
		RULE_displayed_column = 21, RULE_table_spec = 22, RULE_column_spec = 23, 
		RULE_alias = 24, RULE_expression = 25, RULE_expr = 26, RULE_boolean_primary = 27, 
		RULE_comparison_operator = 28, RULE_predicate = 29, RULE_bit_expr = 30, 
		RULE_simple_expr = 31, RULE_literal = 32, RULE_delete_statement = 33, 
		RULE_delete_expression = 34, RULE_delete_list1 = 35, RULE_table_name = 36, 
		RULE_update_statement = 37, RULE_update_expression = 38, RULE_update_list1 = 39, 
		RULE_set_clause = 40, RULE_assignment_list = 41, RULE_col_name = 42, RULE_insert_statement = 43, 
		RULE_insert_expression = 44, RULE_insert_list1 = 45, RULE_column_name_list = 46, 
		RULE_value_list = 47, RULE_value_list1 = 48, RULE_value_list_A = 49, RULE_column_list_B = 50, 
		RULE_table_references = 51, RULE_table_reference = 52, RULE_table_factor = 53, 
		RULE_table_subquery = 54, RULE_join_table = 55, RULE_join_table_factor = 56, 
		RULE_join_condition = 57, RULE_conditional_expr = 58;
	public static final String[] ruleNames = {
		"var1", "var2", "var3", "identifier", "number_literal", "sqlQuery", "sql_statement", 
		"select_statement", "select_expression", "select_list1", "from_clause1", 
		"where_clause", "groupby_clause", "groupby_item", "having_clause", "orderby_clause", 
		"orderby_item", "limit_clause", "offset", "row_count", "select_list", 
		"displayed_column", "table_spec", "column_spec", "alias", "expression", 
		"expr", "boolean_primary", "comparison_operator", "predicate", "bit_expr", 
		"simple_expr", "literal", "delete_statement", "delete_expression", "delete_list1", 
		"table_name", "update_statement", "update_expression", "update_list1", 
		"set_clause", "assignment_list", "col_name", "insert_statement", "insert_expression", 
		"insert_list1", "column_name_list", "value_list", "value_list1", "value_list_A", 
		"column_list_B", "table_references", "table_reference", "table_factor", 
		"table_subquery", "join_table", "join_table_factor", "join_condition", 
		"conditional_expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, "'='", "'<='", "'>='", 
		"'>'", "'<'", "';'", "':'", "'.'", "','", "'*'", "')'", "'('", "']'", 
		"'['", "'+'", "'-'", "'~'", "'|'", "'&'", "'^'", "'!'", "'!='", null, 
		null, "'_'", "'$'", "'`'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "SELECT", "FROM", "WHERE", "DISTINCT", "ALL", "ASC", "DESC", 
		"LIMIT", "HAVING", "GROUP_BY", "ORDER_BY", "AS", "BETWEEN", "OR", "AND", 
		"XOR", "CURRENT_DATE", "UPDATE", "DELETE", "SET", "LOW_PRIORITY", "QUICK", 
		"IGNORE", "INSERT", "INTO", "DELAYED", "HIGH_PRIORITY", "VALUES", "VALUE", 
		"INNER", "CROSS", "STRAIGHT_JOIN", "ON", "JOIN", "NATURAL", "LEFT", "RIGHT", 
		"OUTER", "USING", "NOT", "NULL", "DIV", "MOD", "EQ", "LTE", "GTE", "GT", 
		"LT", "SEMI", "COLON", "DOT", "COMMA", "ASTERISK", "RPAREN", "LPAREN", 
		"RBRACK", "LBRACK", "PLUS", "MINUS", "NEGATION", "BITOR", "BITAND", "POWER_OP", 
		"BIT_NOT", "BIT_NOT_EQ", "LETTER", "DIGIT", "UNDERSCORE", "DOLLER", "TICK", 
		"INTEGER_NUM", "REAL_NUMBER"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "sqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public sqlParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Var1Context extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(sqlParserParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(sqlParserParser.LETTER, i);
		}
		public List<TerminalNode> DOLLER() { return getTokens(sqlParserParser.DOLLER); }
		public TerminalNode DOLLER(int i) {
			return getToken(sqlParserParser.DOLLER, i);
		}
		public List<TerminalNode> UNDERSCORE() { return getTokens(sqlParserParser.UNDERSCORE); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(sqlParserParser.UNDERSCORE, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(sqlParserParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(sqlParserParser.DIGIT, i);
		}
		public Var1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).enterVar1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).exitVar1(this);
		}
	}

	public final Var1Context var1() throws RecognitionException {
		Var1Context _localctx = new Var1Context(_ctx, getState());
		enterRule(_localctx, 0, RULE_var1);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(119); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(118);
				match(DIGIT);
				}
				}
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DIGIT );
			setState(123);
			_la = _input.LA(1);
			if ( !(((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (LETTER - 67)) | (1L << (UNDERSCORE - 67)) | (1L << (DOLLER - 67)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					_la = _input.LA(1);
					if ( !(((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (LETTER - 67)) | (1L << (DIGIT - 67)) | (1L << (UNDERSCORE - 67)) | (1L << (DOLLER - 67)))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var2Context extends ParserRuleContext {
		public List<TerminalNode> LETTER() { return getTokens(sqlParserParser.LETTER); }
		public TerminalNode LETTER(int i) {
			return getToken(sqlParserParser.LETTER, i);
		}
		public List<TerminalNode> UNDERSCORE() { return getTokens(sqlParserParser.UNDERSCORE); }
		public TerminalNode UNDERSCORE(int i) {
			return getToken(sqlParserParser.UNDERSCORE, i);
		}
		public List<TerminalNode> DOLLER() { return getTokens(sqlParserParser.DOLLER); }
		public TerminalNode DOLLER(int i) {
			return getToken(sqlParserParser.DOLLER, i);
		}
		public List<TerminalNode> DIGIT() { return getTokens(sqlParserParser.DIGIT); }
		public TerminalNode DIGIT(int i) {
			return getToken(sqlParserParser.DIGIT, i);
		}
		public Var2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var2; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).enterVar2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).exitVar2(this);
		}
	}

	public final Var2Context var2() throws RecognitionException {
		Var2Context _localctx = new Var2Context(_ctx, getState());
		enterRule(_localctx, 2, RULE_var2);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !(((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (LETTER - 67)) | (1L << (UNDERSCORE - 67)) | (1L << (DOLLER - 67)))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(134);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(131);
					_la = _input.LA(1);
					if ( !(((((_la - 67)) & ~0x3f) == 0 && ((1L << (_la - 67)) & ((1L << (LETTER - 67)) | (1L << (DIGIT - 67)) | (1L << (UNDERSCORE - 67)) | (1L << (DOLLER - 67)))) != 0)) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					}
					} 
				}
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var3Context extends ParserRuleContext {
		public List<TerminalNode> TICK() { return getTokens(sqlParserParser.TICK); }
		public TerminalNode TICK(int i) {
			return getToken(sqlParserParser.TICK, i);
		}
		public Var3Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var3; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).enterVar3(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).exitVar3(this);
		}
	}

	public final Var3Context var3() throws RecognitionException {
		Var3Context _localctx = new Var3Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_var3);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(TICK);
			setState(139); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(138);
				_la = _input.LA(1);
				if ( _la <= 0 || (_la==TICK) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(141); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << SELECT) | (1L << FROM) | (1L << WHERE) | (1L << DISTINCT) | (1L << ALL) | (1L << ASC) | (1L << DESC) | (1L << LIMIT) | (1L << HAVING) | (1L << GROUP_BY) | (1L << ORDER_BY) | (1L << AS) | (1L << BETWEEN) | (1L << OR) | (1L << AND) | (1L << XOR) | (1L << CURRENT_DATE) | (1L << UPDATE) | (1L << DELETE) | (1L << SET) | (1L << LOW_PRIORITY) | (1L << QUICK) | (1L << IGNORE) | (1L << INSERT) | (1L << INTO) | (1L << DELAYED) | (1L << HIGH_PRIORITY) | (1L << VALUES) | (1L << VALUE) | (1L << INNER) | (1L << CROSS) | (1L << STRAIGHT_JOIN) | (1L << ON) | (1L << JOIN) | (1L << NATURAL) | (1L << LEFT) | (1L << RIGHT) | (1L << OUTER) | (1L << USING) | (1L << NOT) | (1L << NULL) | (1L << DIV) | (1L << MOD) | (1L << EQ) | (1L << LTE) | (1L << GTE) | (1L << GT) | (1L << LT) | (1L << SEMI) | (1L << COLON) | (1L << DOT) | (1L << COMMA) | (1L << ASTERISK) | (1L << RPAREN) | (1L << LPAREN) | (1L << RBRACK) | (1L << LBRACK) | (1L << PLUS) | (1L << MINUS) | (1L << NEGATION) | (1L << BITOR) | (1L << BITAND))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (POWER_OP - 64)) | (1L << (BIT_NOT - 64)) | (1L << (BIT_NOT_EQ - 64)) | (1L << (LETTER - 64)) | (1L << (DIGIT - 64)) | (1L << (UNDERSCORE - 64)) | (1L << (DOLLER - 64)) | (1L << (INTEGER_NUM - 64)) | (1L << (REAL_NUMBER - 64)))) != 0) );
			setState(143);
			match(TICK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierContext extends ParserRuleContext {
		public Var1Context var1() {
			return getRuleContext(Var1Context.class,0);
		}
		public Var2Context var2() {
			return getRuleContext(Var2Context.class,0);
		}
		public Var3Context var3() {
			return getRuleContext(Var3Context.class,0);
		}
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).enterIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).exitIdentifier(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_identifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DIGIT:
				{
				setState(145);
				var1();
				}
				break;
			case LETTER:
			case UNDERSCORE:
			case DOLLER:
				{
				setState(146);
				var2();
				}
				break;
			case TICK:
				{
				setState(147);
				var3();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Number_literalContext extends ParserRuleContext {
		public TerminalNode REAL_NUMBER() { return getToken(sqlParserParser.REAL_NUMBER, 0); }
		public TerminalNode INTEGER_NUM() { return getToken(sqlParserParser.INTEGER_NUM, 0); }
		public Number_literalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).enterNumber_literal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof sqlParserListener ) ((sqlParserListener)listener).exitNumber_literal(this);
		}
	}

	public final Number_literalContext number_literal() throws RecognitionException {
		Number_literalContext _localctx = new Number_literalContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_number_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==PLUS || _la==MINUS) {
				{
				setState(150);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(153);
			_la = _input.LA(1);
			if ( !(_la==INTEGER_NUM || _la==REAL_NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
